Fixed: task manager icons alignment.

--- a/assets/css/omgf-admin.less
+++ b/assets/css/omgf-admin.less
@@ -75,12 +75,12 @@
       li {
         padding-left: 1.5em;
         text-indent: -2em;
-        line-height: 18px;
+        line-height: 1.5em;
 
         &:before {
           font-family: 'dashicons';
-          font-size: 18px;
-          vertical-align: middle;
+          font-size: 16px;
+          vertical-align: -3px;
         }
 
         &.stale:before {
